--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "update":"node ./doubleData.js && node ./BigData.js && node ./GreatData.js"
-
+    "update": "node ./doubleData.js && node ./BigData.js && node ./GreatData.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "node-xlsx": "^0.21.0",
     "puppeteer": "^14.3.0"
   }
 }
